feat: port Mekanical Create to Minecraft 1.20.1